fix: Readjusted form warning colors to improve contrast

--- a/mini-projects/interstellar-converter/src/style/style.css
+++ b/mini-projects/interstellar-converter/src/style/style.css
@@ -87,7 +87,6 @@ body {
 	font-size: 16px;
 	position: relative;
 	margin-top: 5px;
-	margin-right: 50%;
 	visibility: hidden;
 }
 
@@ -149,7 +148,7 @@ body {
 }
 
 .form-control.success input {
-	border-color: #2ecc71;
+	border-color: #73ff00;
 }
 
 .form-control.error input {
@@ -157,7 +156,7 @@ body {
 }
 
 .form-control.success i.fa-check-circle {
-  color: #2ecc71;
+  color: #73ff00;
   visibility: visible;
 }
 
@@ -167,6 +166,6 @@ body {
 }
 
 .form-control.error small {
-  color: #b13800;
+  color: #ff0000;
   visibility: visible;
 }
